--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <h1>Liste des articles</h1>
 
     <ol>
-        <li><a href="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Minecraft.html">Minecraft</a></li>
-        <li><a href="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Eldenring.html">Elden Ring</a></li>
-        <li><a href="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\expeditio33.html">Expedition 33</a></li>
-        <li><a href="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Astrobot.html">AstroBot</a></li>
+        <li><a href="Minecraft.html">Minecraft</a></li>
+        <li><a href="Eldenring.html">Elden Ring</a></li>
+        <li><a href="expeditio33.html">Expedition 33</a></li>
+        <li><a href="Astrobot.html">AstroBot</a></li>
     </ol>
 
 </body>
 </html>
+
