--- a/Minecraft.html
+++ b/Minecraft.html
@@ -14,12 +14,13 @@
    <table border="1" width="75%">
         <tr>        
             <td>À l'origine conçu comme un jeu sur navigateur, Minecraft est finalement développé pour ordinateurs (Windows, Mac et Linux) à l'aide de la technique Java, puis pour téléphone mobile dans sa version Minecraft Bedrock Edition (Android, iOS et Windows Phone, version qui sera plus tard étendue à d'autres plate-formes).</td>    
-            <td><img src="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Minecraft-img.jpeg"></td>    
+            <td><img src="Minecraft-img.jpeg"></td>    
             <td>20,45€</td>
         </tr>
    </table>
    
    <br>
-   <p><a href="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Listes-des-articles.html">MENU</a></p>
+   <p><a href="index.html">MENU</a></p>
 </body>
+
 </html>
