--- a/Eldenring.html
+++ b/Eldenring.html
@@ -14,12 +14,13 @@
    <table border="1" width="75%">
         <tr>        
             <td>Elden Ring est un jeu vidéo d'action-RPG développé par FromSoftware et édité par Bandai Namco Entertainment, issu de la collaboration entre le créateur de jeux vidéo Hidetaka Miyazaki et l'écrivain George R. R. Martin.</td>    
-            <td><img src="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Eldenring-img.jpeg"></td>    
+            <td><img src="Eldenring-img.jpeg"></td>    
             <td>35€</td>
         </tr>
    </table>
    
    <br>
-   <p><a href="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Listes-des-articles.html">MENU</a></p>
+   <p><a href="index.html">MENU</a></p>
 </body>
+
 </html>
