--- a/expeditio33.html
+++ b/expeditio33.html
@@ -14,12 +14,13 @@
    <table border="1" width="25%">
         <tr>        
             <td>Clair Obscur: Expedition 33 est un jeu vidéo de rôle français développé par Sandfall Interactive et publié par Kepler Interactive, sorti le 24 avril 2025 sur Microsoft Windows, Xbox Series et PlayStation 5.</td>    
-            <td><img src="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\expedition33.jpg"></td>    
+            <td><img src="expedition33.jpg"></td>    
             <td>30€</td>
         </tr>
    </table>
    
    <br>
-   <p><a href="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Listes-des-articles.html">MENU</a></p>
+   <p><a href="index.html">MENU</a></p>
 </body>
+
 </html>
