--- a/Astrobot.html
+++ b/Astrobot.html
@@ -14,12 +14,13 @@
    <table border="1" width="5%">
         <tr>        
             <td>Astro Bot est un jeu de plateforme développé par Team Asobi et publié par Sony Interactive Entertainment, sorti le 6 septembre 2024 sur PlayStation 5. Il s'agit de la suite du jeu Astro's Playroom sorti en 2020 et du troisième jeu de la série Astro Bot.</td>    
-            <td><img src="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Astrobot.jpeg"></td>    
+            <td><img src="Astrobot.jpeg"></td>    
             <td>55€</td>
         </tr>
    </table>
    
    <br>
-   <p><a href="D:\BTS SIO\Mr Chergui\TP3_Articles_JUERY_L\Listes-des-articles.html">MENU</a></p>
+   <p><a href="index.html">MENU</a></p>
 </body>
+
 </html>
